--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
         <meta charset="UTF-8">
         <title>Work Time Calculator</title>
         <script src="scripts.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <form name="work-time-calculator">
+        <form name="work-time-calculator" id="work-time-calculator-form">
             <label for="start-time">Start time</label>
             <input type="text" class="watch-change" name="start-time" id="start-time" value="9.00">
             <label for="break-duration">Break duration (minutes)</label>
