--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <label for="end-time">End time</label>
             <input type="text" class="watch-change" name="end-time" id="end-time" value="17.00">
             <label for="work-hours">Work hours (hours.minutes)</label>
-            <input type="text" class="watch-change" name="work-hours" id="work-hours" value="7.30">
+            <input type="text" class="watch-change" name="work-hours" id="work-hours" value="">
             <input type="submit" id="calculate-time-button">
         </form>
     </body>
